Bug 301231 - kmail opens attachment in kwrite when its told to open it in libreoffice calc
Summary: kmail opens attachment in kwrite when its told to open it in libreoffice calc
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.8.3
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-05 17:00 UTC by farmboy0
Modified: 2012-06-06 11:51 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description farmboy0 2012-06-05 17:00:20 UTC
I got an email with a csv file attached with mimetype application/octet-stream.
I click on it to open it.
The open attachment dialog is shown.
The second button(with the default open option) says:
Open with 'LibreOffice Calc'
I press this button.
The attachment opens in KWrite.


Reproducible: Always



Expected Results:  
I expect the attachment to open in libreoffice calc.

In file association libreoffice calc is set as default application for text/csv
Comment 1 Laurent Montel 2012-06-06 11:45:06 UTC
I confirm it.
Will fix soon.
Comment 2 Laurent Montel 2012-06-06 11:50:48 UTC
Git commit 3de53c1871076eb7743e91638d8a94ff55f91b4d by Montel Laurent.
Committed on 06/06/2012 at 13:50.
Pushed by mlaurent into branch 'master'.

Fix Bug 301231 - kmail opens attachment in kwrite when its told to open

it in libreoffice calc
FIXED-IN: 4.8.5

M  +4    -1    messageviewer/viewer_p.cpp

http://commits.kde.org/kdepim/3de53c1871076eb7743e91638d8a94ff55f91b4d
Comment 3 Laurent Montel 2012-06-06 11:51:42 UTC
Git commit 0c87e3ac8828ef91869eadf1fe0d3f15287911fb by Montel Laurent.
Committed on 06/06/2012 at 13:50.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 301231 - kmail opens attachment in kwrite when its told to open

it in libreoffice calc
FIXED-IN: 4.8.5
(cherry picked from commit 3de53c1871076eb7743e91638d8a94ff55f91b4d)

M  +4    -1    messageviewer/viewer_p.cpp

http://commits.kde.org/kdepim/0c87e3ac8828ef91869eadf1fe0d3f15287911fb