Fix Bug 301231 - kmail opens attachment in kwrite when its told to open

it in libreoffice calc
FIXED-IN: 4.8.5
BUG: 301231
(cherry picked from commit 3de53c1871076eb7743e91638d8a94ff55f91b4d)